main.tf
provider "aws" {
  region = "us-west-2"
  profile = "ruppworks-admin"
}

data "aws_ami" "ubuntu" {
  most_recent = true

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd-gp3/ubuntu-noble-24.04-amd64-server-*"]
  }

  owners = ["099720109477"] # Canonical
}

resource "aws_instance" "app_server" {
  ami           = data.aws_ami.ubuntu.id
  instance_type = "t2.micro"
  subnet        = aws_subnet.public[0].id

  tags = {
    Name = "learn-terraform"
  }
}
